[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_econest"            # 包名
version = "0.1.0"                     # 包版本
description = "econest device data collection"
readme = "README.md"                  # README 文件路径
license = {text = "MIT"}              # 许可证类型
authors = [
    { name = "econest", email = "service@eco-nest.net" }
]
dependencies = [
    "aiohttp>=3.9.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/econest-energy/py_econest"
Issues = "https://github.com/econest-energy/py_econest/issues"